WIP update experience sub-sections, fullstack; build infrastructure to clean/lint/build 2 .tex files for ios/full-stack

--- a/cv/main.product.tex
+++ b/cv/main.product.tex
@@ -107,40 +107,38 @@ focused on full-stack development with React, Next.js, TypeScript and PostgreSQL
 \subsection*{Experience}
 
 \Experience
-{Senior iOS Engineer \textbar\ Lead Engineer}
-{Dec 2023 — Oct 2025}
+{Senior Software Engineer}
+{Jan 2025 — Present}
 {\href{https://finitetimespace.com}{Finite Timespace LLC}}
 
 \noindent
-Provide hands‑on engineering and technical consulting for businesses and startups,
-  focusing on Apple platforms -- iOS, macOS, watchOS, tvOS.
-
-\noindent
-\begin{itemize}[label=-]
-  \setlength\itemsep{0cm}
-\item Wurthy: Developed a business web app (boosting sales and enabling monthly recurring revenue)
-  and a customer web app (flexible checkout flow for buyers). Built products using
-  \textbf{Next.js, React 19, Tailwind, PostgreSQL (Supabase), Prisma ORM}.
-\item Loblaw Digital: Designed and delivered a \textbf{new subscription system} for in-store physical products,
-  allowing users to manage recurring orders automatically (no need to reorder manually).
-\item Loblaw Digital: Championed the introduction of a \textbf{UseCase} domain layer within the iOS architecture,
-  improving testability for the entire iOS eng team.
-\end{itemize}
+Provide hands-on engineering and technical consulting for businesses
+and startups across web and mobile platforms.
 
 \SubSectionSpacing
 
 \Experience
-{Founding iOS Engineer}
-{Jan 2023 -- Oct 2023}
+{Software Engineer}
+{Jan 2023 -- Jan 2025}
 {\href{https://www.wurthy.co}{Wurthy} (Profitable solutions for growing businesses)}
 
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Built and delivered the MVP iOS app delivering a new C2C Buy‑Now‑Pay‑Later experience.
-  Designed architecture (MVVM+Coordinator) and managed a team of 3 iOS engineers.
-\item Sunset the iOS product after company pivot to B2B category, driving
-  transition planning and team realignment.
+\item Build two web applications -- a B2B dashboard (boosting
+  sales, enabling MMR tracking) and a customer-facing checkout
+  application. Stack: \textbf{Next.js, React 19, Tailwind, PostgreSQL,
+  Supabase, Prisma ORM}.
+\end{itemize}
+
+\SubSectionSpacing
+
+\noindent
+\begin{itemize}[label=-]
+  \setlength\itemsep{0em}
+\item Developed the front-end part of the taki.app
+  (https://taki.app). Tech stack comprises TypeScript, React, Next.js,
+  GCP, Firebase, Firestore.
 \end{itemize}
 
 \SubSectionSpacing
