update experience according as full-stack eng

--- a/cv/main.product.tex
+++ b/cv/main.product.tex
@@ -133,6 +133,11 @@ and startups across web and mobile platforms.
 
 \SubSectionSpacing
 
+\Experience
+{Software Engineer}
+{Jun 2022 -- Nov 2022}
+{\href{https://www.fluxon.com/}{Fluxon} (Global product development company)}
+
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
@@ -197,9 +202,8 @@ and startups across web and mobile platforms.
 
 \subsection*{Technical Stack}
 
-\noindent \textbf{iOS}: Swift, Objective-C, SwiftUI, UIKit, Swift Concurrency,
-Swift Testing, RxSwift, GCD, XCTest, Redux, MVVM.\\
-\noindent \textbf{Full-stack}: React, Next.js, TypeScript, PostgreSQL.\\
+\noindent \textbf{Full-stack}: React, Next.js, Node.js, TypeScript,
+Tailwind CSS, PostgreSQL, Supabase, Prisma ORM, Jest.\\
 \noindent \textbf{Tools}: Make, Fastlane, GitHub Actions.
 
 %% Education
