cv: update experience

--- a/cv/main.product.tex
+++ b/cv/main.product.tex
@@ -125,10 +125,9 @@ and startups across web and mobile platforms.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Build two web applications -- a B2B dashboard (boosting
-  sales, enabling MMR tracking) and a customer-facing checkout
-  application. Stack: \textbf{Next.js, React 19, Tailwind, PostgreSQL,
-  Supabase, Prisma ORM}.
+\item designed and built two production web apps (B2B dashboard,
+  customer checkout flow), enabling real-time MRR tracking and
+  reducing manual sales reporting.
 \end{itemize}
 
 \SubSectionSpacing
@@ -144,6 +143,10 @@ and startups across web and mobile platforms.
 \item Developed the front-end part of the taki.app
   (https://taki.app). Tech stack comprises TypeScript, React, Next.js,
   GCP, Firebase, Firestore.
+\item built front-end features for \href{unite.io}{takigames.net},
+  ex. Taki Games, a social platform; implemented real-time data sync
+  with \textbf{Firebase/Firestore} and deployed on \textbf{GCP}, using
+  \textbf{TypeScript, React, Next.js}.
 \end{itemize}
 
 \SubSectionSpacing
@@ -156,12 +159,13 @@ and startups across web and mobile platforms.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Managed a \textbf{team of 4 mobile developers (Android and iOS)}, tackling requirements processing,
-  delivery responsibilities and people management.
-\item Designed and led the Lead Generation feature to provide \textbf{personalized auto insurance plans}
-  for customers \textit{(30+ million MAU, end of Q1 2022)}.
-\item Developed user's driving experience workflow, created brand new \textit{Driving} tab to see driving statistics
-  and promote safe driving. Technologies included Swift, UIKit, RxSwift, Uber RIBs, XCTests.
+\item led a \textbf{cross-functional team of 4 engineers}, owning
+  requirements, sprint delivery, and people management.
+\item designed and shipped Lead Generation feature delivering
+  \textbf{personalized auto insurance plans} to 30+ millions monthly
+  active users.
+\item designed and shipped brand new 'Driving tab to display driving
+  statistics, promoting safe driving service. driven by \textbf{RIB architecture}.
 \end{itemize}
 
 \SubSectionSpacing
