update oldest experience sections

--- a/cv/main.product.tex
+++ b/cv/main.product.tex
@@ -178,10 +178,11 @@ and startups across web and mobile platforms.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Build the \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health
-    Coaching} and \href{https://apps.apple.com/us/app/betterme-mental-health/id1363010081}{Mental
-    Health} apps from scratch using \textbf{Redux architecture}.
-\item Migrated the Mental Health app from VIPER to \href{https://github.com/betterme-dev/ReduxCore}{Redux architecture}.
+\item build Health Coaching and Mental Health products from scratch
+  using \textbf{Redux architecture} (unidirectional data flow,
+  centralized state, event-driven design).
+\item led architecture migration from \textbf{VIPER to Redux}, Mental
+  Health app.
 \end{itemize}
 
 \SubSectionSpacing
@@ -192,14 +193,17 @@ and startups across web and mobile platforms.
 {\href{https://www.cybervisiontech.com}{CyberVision, Inc.}}
 
 \noindent Project: \href{https://www.nuvocares.com/solutions}{Nuvo:
-  applications for pregnant women and doctor}.
+  applications for pregnant women and doctor} -- FDA-cleared remote
+health monitoring platform.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Developed iOS applications for manufactured FDA cleared device
-  for remote nonstress tests for pregnant women to monitor real-time health indicators.
-\item Architected and developed a separate SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
-\item The application was designed to scale in mind using VIPER design pattern and BDD testing approach (Quick, Nimble).
+\item built real-time health monitoring application processing live
+  sensor data for remote patient diagnostics (FDA-cleared product).
+\item architected device communication SDK (Bluetooth Classic);
+  supported FDA certification from engineering side.
+\item Designed application within \textbf{VIPER architecture},
+  following BDD testing approach.
 \end{itemize}
 
 %% Tech Stack
