update fs experience section copies

--- a/cv/main.product.tex
+++ b/cv/main.product.tex
@@ -140,10 +140,7 @@ and startups across web and mobile platforms.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Developed the front-end part of the taki.app
-  (https://taki.app). Tech stack comprises TypeScript, React, Next.js,
-  GCP, Firebase, Firestore.
-\item built front-end features for \href{unite.io}{takigames.net},
+\item built front-end features for \href{unite.io}{unite.io},
   ex. Taki Games, a social platform; implemented real-time data sync
   with \textbf{Firebase/Firestore} and deployed on \textbf{GCP}, using
   \textbf{TypeScript, React, Next.js}.
@@ -164,8 +161,8 @@ and startups across web and mobile platforms.
 \item designed and shipped Lead Generation feature delivering
   \textbf{personalized auto insurance plans} to 30+ millions monthly
   active users.
-\item designed and shipped brand new 'Driving tab to display driving
-  statistics, promoting safe driving service. driven by \textbf{RIB architecture}.
+\item designed and shipped brand new \textbf{Driving tab} to display
+  driving statistics, promoting safe driving service.
 \end{itemize}
 
 \SubSectionSpacing
@@ -190,20 +187,15 @@ and startups across web and mobile platforms.
 \Experience
 {iOS Software Engineer}
 {Oct 2015 -- Sep 2018}
-{\href{https://www.cybervisiontech.com}{CyberVision, Inc.}}
-
-\noindent Project: \href{https://www.nuvocares.com/solutions}{Nuvo:
-  applications for pregnant women and doctor} -- FDA-cleared remote
-health monitoring platform.
-\noindent
+{\href{https://www.cybervisiontech.com}{CyberVision, Inc.}} (Nuvo
+Cares, FDA-cleared remote health monitoring platform)
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item built real-time health monitoring application processing live
-  sensor data for remote patient diagnostics (FDA-cleared product).
-\item architected device communication SDK (Bluetooth Classic);
-  supported FDA certification from engineering side.
-\item Designed application within \textbf{VIPER architecture},
-  following BDD testing approach.
+\item built \textbf{real-time health monitoring mobile app processing
+    live sensor data} for remote patient diagnostics (FDA-cleared
+  product).
+\item architected \textbf{device communication SDK}, Bluetooth
+  Classic; supported FDA certification from engineering side.
 \end{itemize}
 
 %% Tech Stack
@@ -211,8 +203,8 @@ health monitoring platform.
 \subsection*{Technical Stack}
 
 \noindent \textbf{Full-stack}: React, Next.js, Node.js, TypeScript,
-Tailwind CSS, PostgreSQL, Supabase, Prisma ORM, Jest.\\
-\noindent \textbf{Tools}: Make, Fastlane, GitHub Actions.
+Tailwind CSS, PostgreSQL, Supabase, Prisma ORM, Jest.
+\textbf{Tools}: Make, Fastlane, GitHub Actions.
 
 %% Education
 
